2012-06-12 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_forecast.php
	 include/functions_reporting.php
	 include/functions_ui.php
	 godmode/reporting/reporting_builder.list_items.php
	 godmode/reporting/reporting_builder.php
	 godmode/reporting/reporting_builder.item_editor.php: Several fixes
	 in reports with metaconsole and fixes in forecast reports.

2012-06-11 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/reporting/visual_console_builder.editor.js,
	godmode/reporting/visual_console_builder.editor.php: cleaned source
	code style.
	
	MERGED FROM TRUNK

2012-06-11 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_io.php: fixed the function "io_safe_output" for
	arrays, now into the function call other function with the name
	"io_safe_output_array".
	
	* include/functions_visual_map.php,
	include/ajax/visual_console_builder.ajax.php,
	godmode/reporting/visual_console_builder.wizard.php,
	godmode/reporting/visual_console_builder.php,
	godmode/reporting/visual_console_builder.editor.js,
	godmode/reporting/visual_console_builder.elements.php,
	godmode/reporting/visual_console_builder.editor.php,
	godmode/reporting/visual_console_builder.constans.php: fixed a lot
	of things about simple value and derivates.

2012-06-11 Dario Rodriguez <dario.rodriguez@artica.es>

	* operatoin/tree.php: Deleted debug trace, sorry ;)

2012-06-11 Dario Rodriguez <dario.rodriguez@artica.es>

	* operatoin/tree.php: Fixed a bug related to html tag id
	with strange characters.

2012-06-11 Dario Rodriguez <dario.rodriguez@artica.es>

	* operation/tree.php: Include functions_gis.php file that
	was missing.

2012-06-11 Dario Rodriguez <dario.rodriguez@artica.es>

	* include/functions_modules.php,
	include/functions_agents.php,
	operation/tree.php: Improved performance for
	tree view module tab.

2012-06-11  Vanessa Gil <vanessa.gil@artica.es>

	* godmode/users/configure_user.php: Removed 'add extra policies'.
