@@ -1,3 +1,8 @@
+2012-06-12 Dario Rodriguez <dario.rodriguez@artica.es>
+
+	* operation/tree.php: Fixed some errors with tree view
+	for policies.
+
 2012-06-12 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
 
 	* include/functions_forecast.php
